--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
+  "name": "rl-app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "next": "latest",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
+    "moment": "^2.29.4",
+    "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.61.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
